{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "InputActions",
            "id": "d07f5755-d8db-4956-9c2e-9fc8e675ca3d",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "cb509229-2036-4bb1-9a45-b74fed577de7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "2bc2e57a-5628-450c-aa61-6ed95e3eb9c6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Drag",
                    "type": "Button",
                    "id": "eab2ec37-c6f2-4c32-a068-d617efa7d9cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "3aa6c001-ab8d-4672-8bbe-96c22da8a01b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bff8f48b-3e6a-41b7-9e96-c09744fcf275",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdc03b35-7289-464c-bf8a-8405c8c81db1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0d89c43-492a-4115-902a-6812ad88b1cb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "160635df-6691-46ee-a786-074f841e3810",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap(duration=0.15)",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}